# SolidumEngine

./: .sconsign.dblite  CMakeLists.txt  README.md  SConstruct  SolidumEngine.sln  main.cpp
Solidum/CommandService/include/: CommandGraph.h  CommandService.h
Solidum/Containers/include/: ObjectPool.h  OrderedQueue.h  SolQueue.h
Solidum/EngineCore/include/: Bus.h  Contract.h  EngineInstance.h  IBus.h  IScheduler.h  IService.h  RoundRobinScheduler.h  ServiceManager.h  SolAllocator.h  SolService.h  SolServiceBus.h
Solidum/EngineCore/src/: EngineInstance.cpp  ServiceManager.cpp  SolAllocator.cpp  SolService.cpp  SolServiceBus.cpp
Solidum/ExecutiveService/include/: ExecutiveService.h
Solidum/ResourceService/include/: ResourceService.h
SolidumAPI/include/: EngineAPI.h  ResourceAPI.h  ServiceAPI.h
SolidumEngine/: SolidumEngine.cpp  SolidumEngine.vcxproj  SolidumEngine.vcxproj.filters
SolidumEngine/Solidum/Containers/include/: IndexList.h  IndexedTypeTree.h  ObjectPool.h  OrderedQueue.h  SolQueue.h
SolidumEngine/Solidum/EngineCore/include/: EngineInstance.h  ServiceManager.h  SolAllocator.h  SolService.h  TypeCollection.h
SolidumEngine/Solidum/EngineCore/src/: EngineInstance.cpp  ServiceManager.cpp  SolAllocator.cpp  SolService.cpp  TypeCollection.cpp
SolidumEngine/Solidum/ResourceService/include/: ResourcePool.h  ResourceService.h
SolidumEngine/SolidumAPI/include/: EngineAPI.h  ResourceAPI.h  ServiceAPI.h
